# sphinx-revealjs-float

./: .buildinfo  .gitignore  README.rst  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  sphinx_revealjs_float.py
.github/workflows/: pages.yml
_sources/: index.rst.txt
docs/: conf.py
