[tool.poetry]
name = "sphinx-revealjs-float"
version = "0.1.0"
description = ""
authors = ["Kazuya Takei <myself@attakei.net>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9 | ^3.10"
Sphinx = ">=4.0.4"
sphinx-revealjs = ">=1.4.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
Sphinx = "^4.4.0"
sphinx-revealjs = "^1.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
